--- a/src/makefile
+++ b/src/makefile
@@ -5,13 +5,13 @@ DESOBJ = share.o des_carlet.o des.o rundes.o des_htable.o des_share.o common.o
 all : rundes.out runaes.out
 
 rundes.out : $(DESOBJ)
-	gcc -O3 -o $@ $(DESOBJ)
+	gcc -O3 -g -o  $@ $(DESOBJ)
 
 runaes.out : $(AESOBJ)
-	gcc -O3 -o $@ $(AESOBJ)
+	gcc -g -O3 -o $@ $(AESOBJ)
 
 %.o: %.c 
-	gcc -O3 -o $@ -c $<
+	gcc -g -O3 -o $@ -c $<
 
 clean:
 	rm -f *.o *.out
